[metadata]
name = cca
version = attr: cca.ccautil.__version__
url = https://github.com/codinuum/cca
author = Codinuum Software Lab
author_email = codinuum@me.com
license = Apache-2.0
description = Helper scripts for the Code Continuity Analysis Framework
long_description = file: README.md

[options]
package_dir =
    =src
packages = find_namespace:
install_requires =
    rdflib >= 5.0

[options.packages.find]
where = src
